@@ -3,16 +3,20 @@
 
 * Aim
 
-  *NOTE*: this is wish-ware - none of this software has yet been
-  written.  The wishes are listed in the document you are reading, and
-  in html files in the documentation directory.  The documentation is
-  not yet in a fully self-consistent and correct state.
+  *NOTE*: this describes wish-ware - none of this software has yet
+  been written.  The wishes are listed in the document you are
+  reading, and in html files in the documentation directory.  The
+  documentation is not yet in a fully self-consistent and correct
+  state.
 
   ~mv-table~ is a CL class type used to store tables of data.
-  ~mv-table~'s slots store vectors of values (but see below).  It
-  supports column and row operations.  It also supports query
-  operations that return a sub-set of the table, or an individual
-  value.
+  ~mv-table~'s slots store vectors or matrices of values (but see
+  below).  It supports column and row operations.  It also supports
+  query operations that return a sub-set of the table, or an
+  individual value.
+
+  Vectors of values are stored in column tables.  2-D matrices of
+  values are stored in square tables.
 
   Columns in ~mv-table~ are typed.  ~Mv-table~'s cells (element of a
   vector) can store any object that is an ~atom~.  It can also store
